--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="section"></div>
 </body>
 
-<script src="../js/viewport-units-buggyfill.js"></script>
+<script src="/js/viewport-units-buggyfill.js"></script>
 <script type="text/javascript">
     window.viewportUnitsBuggyfill.init({ force: true, refreshDebounceWait: 1000, hacks: window.viewportUnitsBuggyfillHacks });
 </script>
