--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .section {
             width: 50vw;
             height: 50vh;
-            background-color: red;
+            background-color: green;
         }
     </style>
 </head>
